# sdl2-android-example

./: .gitignore
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/rocks/georgik/sdlapp/: SDLActivity.java
app/src/main/res/layout/: activity_main.xml
main/: CMakeLists.txt
main/platform/SDL2Common/source/: sdl2basehost.cpp
main/platform/android/source/: AndroidHost.cpp
main/source/: host.h  main.cpp  synth.cpp  synth.h
main/src/: hostVmShared.h  main.cpp
